# ATIA

./: .gitignore  .replit  apply-updates.py  apply_agent_core_integration.py  benchmark_atia.py  benchmark_results.json  config_fix.py  demo_phase1_week2.py  fix_pinecone.py  main.py  phase4_integration_test.py  pyproject.toml  pytest.ini  replit.nix  requirements.txt  run_gateway.py  run_tests.py  start_gateway.py  test_responses_api.py
atia/: __init__.py  __main__.py  config.py
atia/account_manager/: __init__.py  auth.py  aws_security.py  manager.py  models.py  security.py
atia/agent_core/: __init__.py  core.py
atia/api_discovery/: __init__.py  discovery.py  responses_integration.py  updates.py
atia/api_gateway/: __init__.py  auth.py  gateway.py  models.py
atia/doc_processor/: __init__.py  processor.py
atia/feedback/: __init__.py  analyzer.py  api.py  manager.py  models.py
atia/function_builder/: builder.py  init.py  models.py  templates.py  updates.py
atia/need_identifier/: __init__.py  identifier.py
atia/performance/: __init__.py  api.py  (+4 more)
documentation/: .env.example  README.txt  technical_specifications_doc.txt  technical_specifications_doc_1.1..txt  test_command.txt
tests/: __init__.py  network-diagnostic.py  phase3-setup-script.sh  phase4_integration_test.py  publicapi-diagnostic.py  test_account_manager.py  test_agent_core.py  test_api_discovery.py  test_end_to_end_responses_api.py  test_function_builder.py  test_need_identifier.py  test_phase1_week2.py  test_responses_api.py  test_responses_api_error_handling.py  test_tool_registry.py
(+102 files in other folders)
