[tool.poetry]
name = "atia"
version = "0.1.0"
description = "Autonomous Tool Integration Agent"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.6.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
beautifulsoup4 = "^4.12.2"
pinecone-client = "^2.2.4"
sqlalchemy = "^2.0.23"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
cryptography = "^41.0.0"
boto3 = "^1.28.0"  # Added for AWS integration
numpy = "^1.26.0"  # Required for vector operations

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88